<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/simple_background"
    tools:context=".login.Login">

    <TextView
        android:id="@+id/texto_cabecalho_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        android:elevation="3dp"
        android:text="@string/cabecalho_login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/texto_descricao_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="25dp"
        android:background="@android:color/transparent"
        android:elevation="2dp"
        android:text="@string/descricao_login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto_cabecalho_login" />

    <ImageView
        android:id="@+id/border_login"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/background_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto_descricao_login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:background="@color/white"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/blue"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:hintTextColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto_descricao_login"
        app:startIconDrawable="@drawable/icon_email"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:backgroundTint="@color/white"
        android:hint="Senha"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/blue"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:hintTextColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email"
        app:startIconDrawable="@drawable/ic_cadeado"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/button"
        android:imeOptions="actionNext"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_google"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/icon_google"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:icon="@drawable/icon_google"
        app:iconGravity="start"
        app:iconTint="#ffffff"
        app:iconTintMode="multiply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_facebook"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="25dp"
        android:backgroundTint="@color/white"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/icon_facebook"
        app:iconGravity="start"
        app:iconTint="#ffffff"
        app:iconTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/texto_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="25dp"
        android:background="@android:color/transparent"
        android:elevation="2dp"
        android:text="Esqueceu a sua Senha?"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_google" />

    <View
        android:id="@+id/linhaLogin"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="92dp"
        android:layout_marginRight="30dp"
        android:background="@color/white"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="@id/btn_facebook"
        app:layout_constraintStart_toStartOf="@id/btn_google"
        app:layout_constraintTop_toBottomOf="@id/btn_google" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:background="@color/black"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="OU"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/linhaLogin"
        app:layout_constraintEnd_toEndOf="@id/linhaLogin"
        app:layout_constraintStart_toStartOf="@id/linhaLogin"
        app:layout_constraintTop_toTopOf="@id/linhaLogin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/button"
        android:text="@string/cadastrar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linhaLogin" />

    <FrameLayout
        android:id="@+id/progress_bar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:elevation="3dp"
        android:padding="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
