<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog"
    android:backgroundTint="@color/cinza"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".dialogfragments.DialogFragmentCadastro">

    <TextView
        android:id="@+id/dialog"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="Login Ok!"
        android:textAlignment="center"
        android:textColor="@color/white" />

</LinearLayout>
